# cpp-code-generation

./: .gitignore  .gitmodules  info.txt
1_my_cpp_nn_project/: 1_cpp_code_generation_dataset.csv  improved_training.py  info_1_my_cpp_nn_project.txt  preprocess_data.py  test_improved_model.py
1_my_cpp_nn_project/_versions/: dataset.txt  improved_training.py
1_my_cpp_nn_project/_versions/0/: inference_model.py
1_my_cpp_nn_project/_versions/1/: cleanup.py  improved_training.py  preprocess_data.py  test_improved_model.py
1_my_cpp_nn_project/improved_models/: training_log.csv
1_my_cpp_nn_project/tokenizers/: code_tokenizer.pkl  description_tokenizer.pkl
2_my_cpp_nn_project/: 1_cpp_code_generation_dataset.csv  improved_training.py  info_2_my_cpp_nn_project.txt  test_improved_model.py
2_my_cpp_nn_project/_versions/: 1_cpp_code_generation_dataset.csv
2_my_cpp_nn_project/_versions/0/: create_model.py
2_my_cpp_nn_project/_versions/3_dataset/: test_improved_model.py
2_my_cpp_nn_project/_versions/4/: preprocess_data.py
2_my_cpp_nn_project/tokenizers/: description_tokenizer.json  special_tokens.pkl
3_my_cpp_nn_project/: .dockerignore  Dockerfile  LICENSE  README.md  docker-compose.yml  requirements.txt  Для выводов.txt
3_my_cpp_nn_project/_versions/: 2_process_descriptions.py  descriptions_sorted_by_length_v1.csv  Структура dataset.txt
3_my_cpp_nn_project/bpe_tokenizer_cpu/: .dockerignore  Dockerfile  LICENSE  PROJECT_SHOWCASE.md  README.md  requirements.txt
3_my_cpp_nn_project/bpe_tokenizer_cpu/bpe_cpp/: CMakeLists.txt  CMakeLists_optimized.txt  README.md
3_my_cpp_nn_project/bpe_tokenizer_cpu/bpe_cpp/benchmarks/: CMakeLists.txt  README.md  bench_comparison.cpp  bench_fast_tokenizer.cpp  bench_tokenizer.cpp
3_my_cpp_nn_project/bpe_tokenizer_cpu/bpe_cpp/build_web/: CMakeCache.txt  Makefile  cmake_install.cmake
3_my_cpp_nn_project/bpe_tokenizer_cpu/bpe_cpp/build_web/include/: config.h
3_my_cpp_nn_project/bpe_tokenizer_cpu/bpe_cpp/build_web/web/: Makefile  bpe_server_simple
3_my_cpp_nn_project/bpe_tokenizer_cpu/bpe_cpp/build_web/web/models/: README.md
3_my_cpp_nn_project/bpe_tokenizer_cpu/bpe_cpp/build_web/web/models/bpe_12000/: cpp_merges.txt
3_my_cpp_nn_project/bpe_tokenizer_cpu/bpe_cpp/build_web/web/models/hf/: hf_merges_10000.txt
3_my_cpp_nn_project/bpe_tokenizer_cpu/bpe_cpp/build_web/web/models/trained/bpe_1000/: cpp_merges.txt
3_my_cpp_nn_project/bpe_tokenizer_cpu/bpe_cpp/build_web/web/models/trained/bpe_10000/: cpp_vocab.json
3_my_cpp_nn_project/bpe_tokenizer_cpu/bpe_cpp/examples/: CMakeLists.txt  README.md  batch_example.cpp  compare_with_python.cpp  fast_tokenizer_demo.cpp  simple_example.cpp  train_example.cpp
3_my_cpp_nn_project/bpe_tokenizer_cpu/bpe_cpp/include/: README.md  bpe_export.hpp  bpe_tokenizer.hpp  config.h  config.h.in  config.hpp  fast_tokenizer.hpp  memory_pool.hpp  optimized_types.hpp  parallel_trainer.hpp  profiler.hpp  simd_utils.hpp  thread_safe_cache.hpp  utils.hpp  vocabulary.hpp
3_my_cpp_nn_project/bpe_tokenizer_cpu/bpe_cpp/models/: README.md
3_my_cpp_nn_project/bpe_tokenizer_cpu/bpe_cpp/models/bpe_10000/: cpp_vocab.json
3_my_cpp_nn_project/bpe_tokenizer_cpu/bpe_cpp/models/bpe_8000/: cpp_merges.txt  cpp_vocab.json
3_my_cpp_nn_project/bpe_tokenizer_cpu/bpe_cpp/models/hf/: hf_tokenizer_10000.json
3_my_cpp_nn_project/bpe_tokenizer_cpu/bpe_cpp/scripts/: README.md  build.sh  compare_performance.py  compare_with_python.py  profile.sh  run_benchmarks.sh  run_tests.sh
3_my_cpp_nn_project/bpe_tokenizer_cpu/bpe_cpp/src/: README.md  bpe_export.cpp  bpe_tokenizer.cpp  fast_tokenizer.cpp  parallel_trainer.cpp  python_bindings.cpp  utils.cpp  vocabulary.cpp
3_my_cpp_nn_project/bpe_tokenizer_cpu/bpe_cpp/tests/: CMakeLists.txt  README.md  test_compatibility.cpp  test_fast_tokenizer.cpp  test_helpers.hpp  test_memory_pool.cpp  test_parallel.cpp  test_tokenizer.cpp  test_trained_model.cpp  test_utils.cpp  test_vocabulary.cpp
3_my_cpp_nn_project/bpe_tokenizer_cpu/bpe_cpp/tools/: convert_vocab.py
3_my_cpp_nn_project/bpe_tokenizer_cpu/bpe_cpp/web/: CMakeLists.txt  CMakeLists.txt.save  README.md  server.cpp  server_crow.cpp
3_my_cpp_nn_project/check_dataset/: 0_Plan.txt  LICENSE  README.md  p_1_structure.py  p_2_std.py  p_3_topic.py  p_4_descriptions.py  p_5_keywords.py  p_6_compilation.py  p_6_compilation_v3.py
3_my_cpp_nn_project/check_dataset/bugs/: info  (+1 more)
3_my_cpp_nn_project/cpp-bpe-tokenizer/: info.txt
3_my_cpp_nn_project/cpp-bpe-tokenizer/bpe_cpp/: CMakeLists.txt  CMakeLists_optimized.txt  README.md
3_my_cpp_nn_project/cpp-bpe-tokenizer/bpe_cpp/benchmarks/: CMakeLists.txt  bench_comparison.cpp  bench_fast_tokenizer.cpp  bench_tokenizer.cpp
3_my_cpp_nn_project/cpp-bpe-tokenizer/bpe_cpp/examples/: CMakeLists.txt  batch_example.cpp  compare_with_python.cpp  fast_tokenizer_demo.cpp  simple_example.cpp  train_example.cpp
3_my_cpp_nn_project/cpp-bpe-tokenizer/bpe_cpp/include/: bpe_export.hpp  bpe_tokenizer.hpp  config.h  config.h.in  config.hpp  fast_tokenizer.hpp  memory_pool.hpp  optimized_types.hpp  parallel_trainer.hpp  profiler.hpp  simd_utils.hpp  thread_safe_cache.hpp  utils.hpp  vocabulary.hpp
3_my_cpp_nn_project/cpp-bpe-tokenizer/bpe_cpp/models/: cpp_vocab.json
3_my_cpp_nn_project/cpp-bpe-tokenizer/bpe_cpp/scripts/: build.sh  compare_with_python.py  profile.sh  run_benchmarks.sh  run_tests.sh  train_tokenizer.py  validate.sh
3_my_cpp_nn_project/cpp-bpe-tokenizer/bpe_cpp/src/: bpe_export.cpp  bpe_tokenizer.cpp  fast_tokenizer.cpp  parallel_trainer.cpp  python_bindings.cpp  utils.cpp  vocabulary.cpp
3_my_cpp_nn_project/cpp-bpe-tokenizer/bpe_cpp/tests/: CMakeLists.txt  test_compatibility.cpp  test_fast_tokenizer.cpp  test_memory_pool.cpp  test_parallel.cpp  test_tokenizer.cpp  test_trained_model.cpp  test_utils.cpp  test_vocabulary.cpp
3_my_cpp_nn_project/cpp-bpe-tokenizer/bpe_cpp/tools/: convert_vocab.py
3_my_cpp_nn_project/cpp-bpe-tokenizer/bpe_cpp/web/: CMakeLists.txt  CMakeLists.txt.save  server.cpp  server_crow.cpp  swagger.html
3_my_cpp_nn_project/cpp_code_model/: LICENSE  README.md
(+139 files in other folders)
